fix splash screen color change (only when sdk version >= s), fix network error handler, and other improvements.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -29,6 +29,7 @@
         <item name="colorPrimaryInverse">@color/md_theme_dark_inversePrimary</item>
 
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowBackground">@color/md_theme_dark_background</item>
 
     </style>
 </resources>
