--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,6 +29,8 @@
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
 
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowBackground">@color/md_theme_light_background</item>
+
     </style>
     <style name="Theme.AppWidget.AppWidgetContainerParent" parent="Theme.Material3.DynamicColors.DayNight">
         <!-- Radius of the outer bound of widgets to make the rounded corners -->
