--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,13 +1,5 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-
-    <dimen name="nav_header_vertical_spacing">8dp</dimen>
-    <dimen name="nav_header_height">176dp</dimen>
-
-    <dimen name="fab_margin">16dp</dimen>
-
-    <dimen name="widget_margin">0dp</dimen>
     <dimen name="widget_element_min_length">48dp</dimen>
+    <dimen name="fab_margin">48dp</dimen>
+    <dimen name="spacer">5dp</dimen>
 </resources>
