--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <locale-config xmlns:android="http://schemas.android.com/apk/res/android">
-    <locale android:name="zh-CN"/> <!-- Chinese (Simplified) -->
-    <locale android:name="zh-TW"/> <!-- Chinese (Traditional) -->
-    <locale android:name="en-US"/> <!-- English -->
-    <locale android:name="ja"/> <!-- Japanese -->
-    <locale android:name="ko"/> <!-- Korean -->
-    <locale android:name="th"/> <!-- Thailand -->
-    <locale android:name="id"/> <!-- Indonesia -->
+    <locale android:name="zh-CN"/>
+    <locale android:name="en-US"/>
 </locale-config>
