Trying to introduce new feature "Reminder for lesson"; Fix app widget related problems; Fix problem in grade screen where some grades categories don't be shown up.

--- a/app/src/main/res/xml-v31/app_widget_schedule_glance.xml
+++ b/app/src/main/res/xml-v31/app_widget_schedule_glance.xml
@@ -2,7 +2,7 @@
     android:description="@string/schedule_label"
     android:minWidth="96dp"
     android:minHeight="96dp"
-    android:updatePeriodMillis="14400000"
+    android:updatePeriodMillis="0"
     android:previewImage="@drawable/outline_schedule_24dp"
     android:initialLayout="@layout/schedule_appwidget_view"
     android:resizeMode="horizontal|vertical"
